welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:2: error: Missing closing brace `}' assumed here
def dogHouse() {
^MethodsDogHouse:7: error: expected class or object definition
for (i <- 1 to 7) {
^